--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -1,3 +1,418 @@
-<p>
-  dash-board works!
-</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="apple-touch-icon" sizes="76x76" href="../../assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="../../assets/img/favicon.png">
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>Gaia - Bootstrap Template | Free Demo</title>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+  <link href="../../assets/css/bootstrap.css" rel="stylesheet" />
+  <link href="../../assets/css/gaia.css" rel="stylesheet" />
+
+  <!--     Fonts and icons     -->
+  <link href='https://fonts.googleapis.com/css?family=Cambo|Poppins:400,600' rel='stylesheet' type='text/css'>
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+  <link href="../../assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
+</head>
+
+<body>
+
+  <nav class="navbar navbar-default fixed-top" style="background-color: white;">
+    <!-- if you want to keep the navbar hidden you can add this class to the navbar "navbar-burger"-->
+    <div class="container">
+      <div class="navbar-header">
+        <button id="menu-toggle" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar bar1"></span>
+          <span class="icon-bar bar2"></span>
+          <span class="icon-bar bar3"></span>
+        </button>
+        <img alt="..." src="../../assets/img/imgHd/loi-ngo.jpg" />
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right navbar-uppercase">
+          <li>
+            <a href="">Trang chủ</a>
+          </li>
+          <li>
+            <a href="#about">Giới thiệu</a>
+          </li>
+          <li>
+            <a href="#products">Sản phẩm</a>
+          </li>
+          <li>
+            <a href="#contacts">Liên hệ</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+  </nav>
+
+
+  <div class="section section-header">
+    <div class="parallax">
+      <div class="image" style="background-image: url('../../assets/img/sanpham/hinhnen.png')">
+      </div>
+      <div class="container">
+        <!-- <div class="content">
+                    <div class="title-area">
+                        <p>Free Demo</p>
+                        <h1 class="title-modern">Gaia</h1>
+                        <h3>Probably the most stylish bootstrap template in the world!</h2>
+                        <div class="separator line-separator">♦</div>
+                    </div>
+
+                    <div class="button-get-started">
+                        <a href="http://www.creative-tim.com/product/gaia-bootstrap-template" target="_blank" class="btn btn-white btn-fill btn-lg ">
+                            Download Demo
+                        </a>
+                    </div>
+                </div> -->
+
+      </div>
+    </div>
+  </div>
+
+
+  <div class="section section-our-team-freebie" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="title-area">
+            <h2>Lời giới thiệu về công ty</h2>
+            <div class="separator separator-danger">✻</div>
+            <p class="text-justify" style="text-indent: 30px;">Lời đầu tiên công ty TNHH ĐẦU TƯ VÀ PHÁT TRIỂN MINH PHÚ xin gửi tới quý khách lời chào trân trọng! 
+            </p>
+            <p class="text-justify" style="text-indent: 30px;">Trải qua 12 năm nghiên cứu, xây dựng và phát triển, cho đến nay chúng tôi đã và đang gửi đến bà con
+              nông dân những sản phẩm "Chế phẩm sinh học, khoáng chất, dinh dưỡng sản phẩm cải tạo môi trường sử
+              dụng trong ngành nuôi trồng thủy sản" vượt trội về chất lượng.
+            </p>
+            <p class="text-justify" style="text-indent: 30px;">Các sản phẩm đã khẳng định được thế mạnh và chất lượng trên thị trường. Đến với chúng tôi, quý khách
+              hàng sẽ luôn hài lòng bởi các lợi thế sau từ công ty chúng tôi.
+            </p>
+            <p class="text-justify" style="text-indent: 30px;">- Có nguồn nguyên liệu được nhập khẩu trực tiếp từ nước ngoài.</p>
+            <p class="text-justify" style="text-indent: 30px;">- Các sản phẩm uy tín và chất lượng cao.</p>
+            <p class="text-justify" style="text-indent: 30px;">- Sản xuất và bảo quản trong điều kiện đạt tiêu chuẩn.</p>
+            <p class="text-justify" style="text-indent: 30px;">- Có đội ngũ nhân viên là những kỹ sư giàu kinh nghiệm, được đào tạo bài bản trong ngành nuôi thủy sản, nhiệt tình 
+              và giàu kinh nghiệm.
+            </p>
+            <p class="text-justify" style="text-indent: 30px;">- Có chính sách đãi ngộ tốt nhất đối với khách hàng.
+            </p>
+            <p class="text-justify" style="text-indent: 30px;">Với phương châm "Sự hài lòng của quý khách là sự tồn tại của chúng tôi", công ty Minh Phú mong muốn sẽ luôn
+              được đồng hành gắn bó trực tiếp với quý bà con, là thương hiệu tin cậy trong ngành nuôi trồng thủy sản Việt Nam.
+               Để làm được điều đó, Minh Phú sẽ luôn không ngừng nghiên cứu chuyên sâu và thực nghiệm trên cơ sở khoa học, thật
+               nhiều và nhiều hơn nữa, nhằm nâng cao chất lượng sản phẩm, giá cả hợp lý góp phần nâng cao hiệu quả và lợi nhuận 
+               cho bà con.
+            </p>
+            <p class="text-justify" style="text-indent: 30px;">
+               Chúng tôi xin chân thành cảm ơn quý khách hàng đã, đang và sẽ sử dụng sản phẩm của Minh Phú trong thời gian tới. 
+              Kính chúc quý khách hàng sức khỏe và thịnh vượng.
+            </p>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
+
+  <div class="section section-our-team-freebie" id="products">
+    <div class="parallax filter filter-color-black">
+      <div class="image" style="background-image:url('../../assets/img/tom-cang-xanh.JFIF')">
+      </div>
+      <div class="container">
+        <div class="content">
+          <div class="row">
+            <div class="title-area">
+              <h2>Chúng tôi có</h2>
+              <div class="separator separator-danger">✻</div>
+              <!-- <p class="description">We promise you a new look and more importantly, a new attitude. We build that by
+                getting to know you, your needs and creating the best looking clothes.</p> -->
+            </div>
+          </div>
+
+          <div class="team">
+            <div class="row">
+              <div class="col-md-10 col-md-offset-1">
+                <div class="row">
+                  <div class="col-md-4">
+                    <div class="card card-member">
+                      <div class="content">
+                        <div class="">
+                          <img alt="..." class="img-circle" src="../../assets/img/sanpham/nutriMil.png" />
+                        </div>
+                        <div class="description">
+                          <h3 class="title">NUTRI MIL</h3>
+                          <a (click)="detail()"  class="btn btn-primary">Xem chi tiết</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card card-member">
+                      <div class="content">
+                        <div class="">
+                          <img alt="..." class="img-circle" src="../../assets/img/sanpham/btaGlucanC.png" />
+                        </div>
+                        <div class="description">
+                          <h3 class="title">BTA GLUCAN C</h3>
+                          <a href="#" class="btn btn-primary">Xem chi tiết</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card card-member">
+                      <div class="content">
+                        <div class="">
+                          <img alt="..." class="img-circle" src="../../assets/img/sanpham/iddine.png" />
+                        </div>
+                        <div class="description">
+                          <h3 class="title">IODINE</h3>
+                          <a href="#" class="btn btn-primary">Xem chi tiết</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card card-member">
+                      <div class="content">
+                        <div class="">
+                          <img alt="..." class="img-circle" src="../../assets/img/sanpham/bkc.png" />
+                        </div>
+                        <div class="description">
+                          <h3 class="title">BKC</h3>
+                          <a href="#" class="btn btn-primary">Xem chi tiết</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card card-member">
+                      <div class="content">
+                        <div class="">
+                          <img alt="..." class="img-circle" src="../../assets/img/sanpham/yuccaus.png" />
+                        </div>
+                        <div class="description">
+                          <h3 class="title">YUCCA US</h3>
+                          <a href="#" class="btn btn-primary">Xem chi tiết</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="card card-member">
+                      <div class="content">
+                        <div class="">
+                          <img alt="..." class="img-circle" src="../../assets/img/sanpham/eovs.png" />
+                        </div>
+                        <div class="description">
+                          <h3 class="title">EOVS</h3>
+                          <a href="#" class="btn btn-primary">Xem chi tiết</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="section section-our-clients-freebie">
+    <div class="container">
+      <div class="title-area">
+        <h5 class="subtitle text-gray">Here are some</h5>
+        <h2>Clients Testimonials</h2>
+        <div class="separator separator-danger">∎</div>
+      </div>
+
+      <ul class="nav nav-text" role="tablist">
+        <li class="active">
+          <a href="#testimonial1" role="tab" data-toggle="tab">
+            <div class="image-clients">
+              <img alt="..." class="img-circle" src="../../assets/img/faces/face_5.jpg" />
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#testimonial2" role="tab" data-toggle="tab">
+            <div class="image-clients">
+              <img alt="..." class="img-circle" src="../../assets/img/faces/face_6.jpg" />
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#testimonial3" role="tab" data-toggle="tab">
+            <div class="image-clients">
+              <img alt="..." class="img-circle" src="../../assets/img/faces/face_2.jpg" />
+            </div>
+          </a>
+        </li>
+      </ul>
+
+
+      <div class="tab-content">
+        <div class="tab-pane active" id="testimonial1">
+          <p class="description">
+            And I used a period because contrary to popular belief I strongly dislike exclamation points! We no longer
+            have to be scared of the truth feels good to be home In Roman times the artist would contemplate proportions
+            and colors. Now there is only one important color... Green I even had the pink polo I thought I was Kanye I
+            promise I will never let the people down. I want a better life for all!
+          </p>
+        </div>
+        <div class="tab-pane" id="testimonial2">
+          <p class="description">Green I even had the pink polo I thought I was Kanye I promise I will never let the
+            people down. I want a better life for all! And I used a period because contrary to popular belief I strongly
+            dislike exclamation points! We no longer have to be scared of the truth feels good to be home In Roman times
+            the artist would contemplate proportions and colors. Now there is only one important color...
+          </p>
+        </div>
+        <div class="tab-pane" id="testimonial3">
+          <p class="description"> I used a period because contrary to popular belief I strongly dislike exclamation
+            points! We no longer have to be scared of the truth feels good to be home In Roman times the artist would
+            contemplate proportions and colors. The 'Gaia' team did a great work while we were collaborating. They
+            provided a vision that was in deep connection with our needs and helped us achieve our goals.
+          </p>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="section section-small section-get-started" id="contacts">
+    <div class="parallax filter">
+      <div class="image" style="background-image: url('../../assets/img/office-1.jpeg')">
+      </div>
+      <div class="container">
+        <div class="title-area">
+          <h2 class="text-white">Bạn có muốn sử dung các sản phẩm chúng tôi không??</h2>
+          <div class="separator line-separator">♦</div>
+          <p class="description"> Chúng tôi rất quan tâm đến việc tạo ra các sản phẩm Chế phẩm sinh học,
+             khoáng chất, dinh dưỡng sản phẩm cải tạo môi trường sử dụng trong ngành nuôi trồng thủy sản vượt trội về chất lượng
+             để khách hàng lưu tâm thì chúng tôi không bao giờ thất vọng !!!
+            </p>
+        </div>
+
+        <div class="button-get-started">
+          <a href="#gaia" class="btn btn-danger btn-fill btn-lg">Liên hệ chúng tôi</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <footer class="footer footer-big footer-color-black" data-color="black">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-sm-8">
+          <div class="info">
+            <h5 class="title">Công ty TNHH đầu tư và phát triển Minh Phú</h5>
+            <nav>
+              <ul>
+                <li>
+                  <i aria-hidden="true" class="fa fa-home"></i>
+                  <span>Địa chỉ: Lầu 10, 161-163 Trần Quốc Thảo, Phường 09, Quận 03, Thành phố Hồ Chí Minh</span>
+                </li>
+                <li>
+                  <i aria-hidden="true" class="fa fa-phone-square"></i>
+                  <span>Hotline: 0949.509.8888</span>
+                </li>
+                <li>
+                  <i aria-hidden="true" class="fa fa-phone-square"></i>
+                  <span>thangdau811@gmail.com</span>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-8">
+          <div class="info">
+            <h5 class="title"> Help and Support</h5>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#">Contact Us</a>
+                </li>
+                <li>
+                  <a href="#">How it works</a>
+                </li>
+                <li>
+                  <a href="#">Terms &amp; Conditions</a>
+                </li>
+                <li>
+                  <a href="#">Company Policy</a>
+                </li>
+                <li>
+                  <a href="#">Money Back</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      
+        <div class="col-md-2 col-sm-8">
+          <div class="info">
+            <h5 class="title">Theo dõi chúng tôi trên</h5>
+            <nav>
+              <ul>
+                <li>
+                  <a href="#" class="btn btn-social btn-facebook btn-simple">
+                    <i class="fa fa-facebook-square"></i> Facebook
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="btn btn-social btn-dribbble btn-simple">
+                    <i class="fa fa-dribbble"></i> Dribbble
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="btn btn-social btn-twitter btn-simple">
+                    <i class="fa fa-twitter"></i> Twitter
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="btn btn-social btn-reddit btn-simple">
+                    <i class="fa fa-google-plus-square"></i> Google+
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="copyright">
+        ©
+        <script> document.write(new Date().getFullYear())</script> Creative Tim, made with love
+      </div>
+    </div>
+  </footer>
+
+</body>
+
+<!--   core js files    -->
+<script src="../../assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="../../assets/js/bootstrap.js" type="text/javascript"></script>
+
+<!--  js library for devices recognition -->
+<script type="text/javascript" src="assets/js/modernizr.js"></script>
+
+<!--  script for google maps   -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+<!--   file where we handle all the script from the Gaia - Bootstrap Template   -->
+<script type="text/javascript" src="../../assets/js/gaia.js"></script>
+
+</html>
