--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -633,7 +633,7 @@
         </div>
         <div class="col-md-3 col-sm-8">
           <div class="info">
-            <h5 class="title"> Hoox</h5>
+            <h5 class="title"> Help and Support</h5>
             <nav>
               <ul>
                 <li>
