--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -201,7 +201,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang5-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">BKC</h3>
+                          <h3 class="title">BIOPOLD</h3>
                           <a (click)="detail(4)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -270,7 +270,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang7-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">NUTRI MIL</h3>
+                          <h3 class="title">NEW OGANIC</h3>
                           <a (click)="detail(9)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -283,7 +283,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang7-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">BTA GLUCAN C</h3>
+                          <h3 class="title">MP ECOZYME</h3>
                           <a (click)="detail(10)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -296,7 +296,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang8-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">IODINE</h3>
+                          <h3 class="title">BIO ACMIN</h3>
                           <a (click)="detail(11)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -309,7 +309,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang10-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">BKC</h3>
+                          <h3 class="title">ACID OGANIC</h3>
                           <a (click)="detail(12)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -322,7 +322,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang8-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">YUCCA US</h3>
+                          <h3 class="title">MP LACTO</h3>
                           <a (click)="detail(13)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -335,7 +335,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang10-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">EOVS</h3>
+                          <h3 class="title">CANXI SUPER</h3>
                           <a (click)="detail(14)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -348,7 +348,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang11-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">YUCCA US</h3>
+                          <h3 class="title">CANXI P</h3>
                           <a (click)="detail(15)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -361,7 +361,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang11-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">EOVS</h3>
+                          <h3 class="title">CANXIUM</h3>
                           <a (click)="detail(16)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -378,7 +378,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang12-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">NUTRI MIL</h3>
+                          <h3 class="title">PROMIX 10</h3>
                           <a (click)="detail(17)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -391,7 +391,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang12-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">BTA GLUCAN C</h3>
+                          <h3 class="title">SODAMIX ONE</h3>
                           <a (click)="detail(18)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -404,7 +404,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang13-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">IODINE</h3>
+                          <h3 class="title">EDTA VM</h3>
                           <a (click)="detail(19)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -417,7 +417,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang14-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">BKC</h3>
+                          <h3 class="title">YUCCA C</h3>
                           <a (click)="detail(20)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -430,7 +430,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang13-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">YUCCA US</h3>
+                          <h3 class="title">C TẠT</h3>
                           <a (click)="detail(21)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -443,7 +443,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang14-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">EOVS</h3>
+                          <h3 class="title">OXY GEN</h3>
                           <a (click)="detail(22)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -469,7 +469,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang15-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">EOVS</h3>
+                          <h3 class="title">ZEO VS</h3>
                           <a (click)="detail(24)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -486,7 +486,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang16-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">NUTRI MIL</h3>
+                          <h3 class="title">BKC</h3>
                           <a (click)="detail(25)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -499,7 +499,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang16-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">BTA GLUCAN C</h3>
+                          <h3 class="title">IODINE</h3>
                           <a (click)="detail(26)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -512,7 +512,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang17-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">IODINE</h3>
+                          <h3 class="title">WNV8</h3>
                           <a (click)="detail(27)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -525,7 +525,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang17-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">BKC</h3>
+                          <h3 class="title">WIN MAX</h3>
                           <a (click)="detail(28)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -538,7 +538,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang18-anh1.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">YUCCA US</h3>
+                          <h3 class="title">WIN KONG</h3>
                           <a (click)="detail(29)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -551,7 +551,7 @@
                           <img alt="..." class="img-circle" src="../../assets/img/sanpham/Trang18-anh2.jpg" />
                         </div>
                         <div class="description">
-                          <h3 class="title">EOVS</h3>
+                          <h3 class="title">VIRUS STOP</h3>
                           <a (click)="detail(30)" class="btn btn-primary">Xem chi tiết</a>
                         </div>
                       </div>
@@ -605,7 +605,7 @@
           mua các loại thuốc thực phẩm chức năng tốt nhất.
         </p>
         <p class="text-justify" style="text-indent: 30px;">Liên hệ ngay : <a href="tel:0949.509.8888"
-            style="color: brown;"> 0949.509.8888</a>
+            style="color: brown;"> 0949.506.888</a>
         </p>
 
 
@@ -657,7 +657,7 @@
                 </li>
                 <li>
                   <i aria-hidden="true" class="fa fa-phone-square"></i>
-                  <span>thangdau811@gmail.com</span>
+                  <span>Thuysanminhphuvn@gmail.com</span>
                 </li>
               </ul>
             </nav>
@@ -720,18 +720,20 @@
       </div>
     </div>
   </footer>
-  <a href="tel:+84972939830"><div class="hotline">
-    <span class="before-hotline">Hotline:</span>
-    <span class="hotline-number">0949.509.8888</span>
-    </div></a>
-    <div class="mobile-hotline">
+  <a href="tel:+84972939830">
+    <div class="hotline">
+      <span class="before-hotline">Hotline:</span>
+      <span class="hotline-number">0949.506.888</span>
+    </div>
+  </a>
+  <div class="mobile-hotline">
     <div class="mobile-hotline-left">
-    <a href="https://www.m.me/LuonCoKySuTuVanTrucTiep" target="blank">Chat Facebook</a>
+      <a href="https://www.m.me/LuonCoKySuTuVanTrucTiep" target="blank">Chat Facebook</a>
     </div>
-    <div class="mobile-hotline-right"><a href="tel:+0949.509.8888" target="blank">Gọi điện ngay</a></div>
-    </div>
+    <div class="mobile-hotline-right"><a href="tel:+0949.506.888" target="blank">Gọi điện ngay</a></div>
+  </div>
 </body>
-  
+
 
 <!--   core js files    -->
 <script src="../../assets/js/jquery.min.js" type="text/javascript"></script>
